--- a/web/src/stylesheets/templates/kozy-shack/template--base.scss
+++ b/web/src/stylesheets/templates/kozy-shack/template--base.scss
@@ -7,6 +7,11 @@
   font-weight: bold;
 }
 
+#header .text {
+  display: flex;
+  justify-content: center;
+}
+
 //Form Styles
 .form_entry {
   .question {
@@ -17,6 +22,13 @@
         content: "*";
         color: #D8000C;
       }
+    }
+    .label {
+      margin-bottom: 5px;
+    }
+    .button_description_container:first-child,
+    table {
+      margin-top: 5px;
     }
   }
   .email_field .label {
@@ -50,6 +62,9 @@
 //Mobile Styles
 @media only screen and (min-width: 320px) and (max-width: 667px) {
   #e-wrapper {
+    justify-content: flex-start;
+  }
+  #header .text {
     justify-content: flex-start;
   }
   .text img {
