--- a/web/src/stylesheets/templates/kozy-shack/template--survey-form.scss
+++ b/web/src/stylesheets/templates/kozy-shack/template--survey-form.scss
@@ -1,3 +1,6 @@
+@import "../../config/themes/_standard";
+@import "../../config/_base-import";
+
 //General Styles
 #e-wrapper {
   display: flex;
@@ -60,7 +63,7 @@
 }
 
 //Mobile Styles
-@media only screen and (min-width: 320px) and (max-width: 667px) {
+@include breakpoint($bp-mobile-only) {
   #e-wrapper {
     justify-content: flex-start;
   }
