--- a/web/src/stylesheets/templates/standard/template--manage.scss
+++ b/web/src/stylesheets/templates/standard/template--manage.scss
@@ -10,8 +10,13 @@
   }
 }
 
-.manage-engagements {
-  padding-top: 30px;
+a[title="Add Event"] {
+  top: 25px;
+  .btn {
+    display: inline;
+    padding: 0;
+    background: transparent;
+  }
 }
 
 .manage-users {
