minor style updates

--- a/web/src/stylesheets/pages/standard/page--engagement-edit.scss
+++ b/web/src/stylesheets/pages/standard/page--engagement-edit.scss
@@ -50,6 +50,9 @@ a[title="Take Survey"] {
 }
 
 .sub-section {
+    .activity-name {
+        display: none;
+    }
     .metric-group-container {
         .metric-label {
             width: auto;
